feat : crud user budget done
